--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,75 @@
-<p>
-  header works!
-</p>
+<div id="wrapper">
+<header class="sticky-header">
+<div class="container">
+	<div class="sixteen columns">
+
+		<!-- Logo -->
+		<div id="logo">
+			<h1><a href="index.html"><img src="assets/theme/images/logo.png" alt="Work Scout" /></a></h1>
+		</div>
+
+		<!-- Menu -->
+		<nav id="navigation" class="menu">
+			<ul id="responsive">
+
+				<li><a href="index.html">Home</a>
+					<ul>
+						<li><a href="index.html">Home #1</a></li>
+						<li><a href="index-2.html">Home #2</a></li>
+						<li><a href="index-3.html">Home #3</a></li>
+						<li><a href="index-4.html">Home #4</a></li>
+						<li><a href="index-5.html">Home #5</a></li>
+					</ul>
+				</li>
+
+				<li><a href="#">Pages</a>
+					<ul>
+						<li><a href="job-page.html">Job Page</a></li>
+						<li><a href="job-page-alt.html">Job Page Alternative</a></li>
+						<li><a href="resume-page.html">Resume Page</a></li>
+						<li><a href="shortcodes.html">Shortcodes</a></li>
+						<li><a href="icons.html">Icons</a></li>
+						<li><a href="pricing-tables.html">Pricing Tables</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+				</li>
+
+				<li><a href="#">For Candidates</a>
+					<ul>
+						<li><a href="browse-jobs.html">Browse Jobs</a></li>
+						<li><a href="browse-categories.html">Browse Categories</a></li>
+						<li><a href="add-resume.html">Add Resume</a></li>
+						<li><a href="manage-resumes.html">Manage Resumes</a></li>
+						<li><a href="job-alerts.html">Job Alerts</a></li>
+					</ul>
+				</li>
+
+				<li><a href="#">For Employers</a>
+					<ul>
+						<li><a href="add-job.html">Add Job</a></li>
+						<li><a href="manage-jobs.html">Manage Jobs</a></li>
+						<li><a href="manage-applications.html">Manage Applications</a></li>
+						<li><a href="browse-resumes.html">Browse Resumes</a></li>
+					</ul>
+				</li>
+
+				<li><a href="blog.html">Blog</a></li>
+			</ul>
+
+
+			<ul class="responsive float-right">
+				<li><a routerLink="/auth/sign-up"><i class="fa fa-user"></i> Sign Up</a></li>
+				<li><a routerLink="/auth/login"><i class="fa fa-lock"></i> Log In</a></li>
+			</ul>
+
+		</nav>
+
+		<!-- Navigation -->
+		<div id="mobile-navigation">
+			<a href="#menu" class="menu-trigger"><i class="fa fa-reorder"></i> Menu</a>
+		</div>
+
+	</div>
+</div>
+</header>
+<div class="clearfix"></div>
